--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-pinch-zoom": "^1.1.0",
     "react-svg-pan-zoom": "^3.12.1",
     "react-zoom-pan-pinch": "^3.0.8",
     "typescript": "5.1.3"
