--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-fast-pinch-zoom": "^1.1.0",
     "react-svg-pan-zoom": "^3.12.1",
     "react-zoom-pan-pinch": "^3.0.8",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "web3": "^4.0.1"
   },
   "devDependencies": {
     "@types/react-svg-pan-zoom": "^3.3.5",
