--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.16",
     "gsap": "^3.12.1",
+    "metamask-react": "^2.6.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
