--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "classnames": "^2.3.2",
+    "d3": "^7.8.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.16",
@@ -25,14 +27,18 @@
     "metamask-react": "^2.6.0",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-d3": "^0.4.0",
     "react-dom": "18.2.0",
     "react-fast-pinch-zoom": "^1.1.0",
     "react-svg-pan-zoom": "^3.12.1",
     "react-zoom-pan-pinch": "^3.0.8",
+    "resize-observer-polyfill": "^1.5.1",
+    "svg-pan-zoom": "^3.6.1",
     "typescript": "5.1.3",
     "web3": "^4.0.1"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/react-svg-pan-zoom": "^3.3.5",
     "prettier": "^2.8.8"
   }
