--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.16",
     "gsap": "^3.12.1",
+    "jsdom": "^22.1.0",
     "metamask-react": "^2.6.0",
     "next": "13.4.7",
+    "panzoom": "^9.4.3",
     "react": "18.2.0",
     "react-d3": "^0.4.0",
     "react-dom": "18.2.0",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/jsdom": "^21.1.1",
     "@types/react-svg-pan-zoom": "^3.3.5",
     "prettier": "^2.8.8"
   }
