--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-fast-pinch-zoom": "^1.1.0",
     "react-svg-pan-zoom": "^3.12.1",
+    "react-transition-group": "^4.4.5",
     "react-zoom-pan-pinch": "^3.0.8",
     "resize-observer-polyfill": "^1.5.1",
     "svg-pan-zoom": "^3.6.1",
@@ -43,6 +44,7 @@
     "@types/d3": "^7.4.0",
     "@types/jsdom": "^21.1.1",
     "@types/react-svg-pan-zoom": "^3.3.5",
+    "@types/react-transition-group": "^4.4.6",
     "prettier": "^2.8.8"
   }
 }
