--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "d3": "^7.8.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "fabric": "^5.3.0",
     "framer-motion": "^10.12.16",
     "gsap": "^3.12.1",
     "jsdom": "^22.1.0",
+    "konva": "^9.2.0",
+    "lodash": "^4.17.21",
     "metamask-react": "^2.6.0",
     "next": "13.4.7",
     "panzoom": "^9.4.3",
@@ -32,6 +35,7 @@
     "react-d3": "^0.4.0",
     "react-dom": "18.2.0",
     "react-fast-pinch-zoom": "^1.1.0",
+    "react-konva": "^18.2.10",
     "react-svg-pan-zoom": "^3.12.1",
     "react-transition-group": "^4.4.5",
     "react-zoom-pan-pinch": "^3.0.8",
@@ -42,6 +46,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/fabric": "^5.3.3",
     "@types/jsdom": "^21.1.1",
     "@types/react-svg-pan-zoom": "^3.3.5",
     "@types/react-transition-group": "^4.4.6",
