--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "aws-sdk": "^2.1408.0",
     "classnames": "^2.3.2",
     "d3": "^7.8.5",
     "eslint": "8.43.0",
