--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@uidotdev/usehooks": "^2.0.1",
     "aws-sdk": "^2.1408.0",
     "classnames": "^2.3.2",
     "d3": "^7.8.5",
@@ -26,6 +27,7 @@
     "fabric": "^5.3.0",
     "framer-motion": "^10.12.16",
     "gsap": "^3.12.1",
+    "hamburger-react": "^2.5.0",
     "jsdom": "^22.1.0",
     "konva": "^9.2.0",
     "lodash": "^4.17.21",
@@ -33,6 +35,7 @@
     "next": "13.4.7",
     "panzoom": "^9.4.3",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-d3": "^0.4.0",
     "react-dom": "18.2.0",
     "react-fast-pinch-zoom": "^1.1.0",
@@ -41,6 +44,7 @@
     "react-transition-group": "^4.4.5",
     "react-zoom-pan-pinch": "^3.0.8",
     "resize-observer-polyfill": "^1.5.1",
+    "styled-media-query": "^2.1.2",
     "svg-pan-zoom": "^3.6.1",
     "typescript": "5.1.3",
     "web3": "^4.0.1"
