--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/web3": "^1.2.2",
     "@uidotdev/usehooks": "^2.0.1",
     "aws-sdk": "^2.1408.0",
     "classnames": "^2.3.2",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.21",
     "metamask-react": "^2.6.0",
     "next": "13.4.7",
+    "node-fetch": "^3.3.1",
     "panzoom": "^9.4.3",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
@@ -47,7 +49,9 @@
     "styled-media-query": "^2.1.2",
     "svg-pan-zoom": "^3.6.1",
     "typescript": "5.1.3",
-    "web3": "^4.0.1"
+    "web3": "^4.0.2",
+    "webpack-node-externals": "^3.0.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
