--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.6",
     "@types/web3": "^1.2.2",
     "@uidotdev/usehooks": "^2.0.1",
+    "aws-amplify": "^5.3.3",
     "aws-sdk": "^2.1408.0",
     "classnames": "^2.3.2",
     "eslint": "8.43.0",
