--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/web3": "^1.2.2",
     "@uidotdev/usehooks": "^2.0.1",
     "aws-amplify": "^5.3.3",
-    "aws-sdk": "^2.1408.0",
+    "aws-sdk": "^2.1414.0",
     "classnames": "^2.3.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "express": "^4.18.2",
     "hamburger-react": "^2.5.0",
     "jsdom": "^22.1.0",
     "metamask-react": "^2.6.0",
