--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "typescript": "5.1.3",
     "web3": "^4.0.2",
