--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-transition-group": "^4.4.5",
     "typescript": "5.1.3",
     "web3": "^4.0.2",
+    "web3-utils": "^4.0.3",
     "webpack-node-externals": "^3.0.0",
     "ws": "^8.13.0"
   },
