--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@types/node": "20.3.1",
+    "@types/pako": "^2.0.0",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@types/web3": "^1.2.2",
@@ -28,6 +29,7 @@
     "metamask-react": "^2.6.0",
     "next": "13.4.7",
     "node-fetch": "^3.3.1",
+    "pako": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
