--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
+    "sass": "^1.64.1",
     "typescript": "5.1.3",
     "web3": "^4.0.2",
     "web3-utils": "^4.0.3",
