--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@metamask/sdk": "^0.7.1",
     "@types/node": "20.3.1",
     "@types/pako": "^2.0.0",
     "@types/react": "18.2.13",
