--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@metamask/eth-sig-util": "^7.0.0",
     "@metamask/sdk": "^0.7.1",
     "@types/node": "20.3.1",
     "@types/pako": "^2.0.0",
@@ -24,6 +25,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "ethers": "^6.7.1",
     "express": "^4.18.2",
     "hamburger-react": "^2.5.0",
     "jsdom": "^22.1.0",
