--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react-dom": "18.2.6",
     "@types/web3": "^1.2.2",
     "@uidotdev/usehooks": "^2.0.1",
-    "aws-amplify": "^5.3.3",
+    "aws-amplify": "^5.3.12",
     "aws-sdk": "^2.1414.0",
     "classnames": "^2.3.2",
     "eslint": "8.43.0",
@@ -38,7 +38,6 @@
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.64.1",
-    "typescript": "5.1.3",
     "web3": "^4.0.2",
     "web3-utils": "^4.0.3",
     "webpack-node-externals": "^3.0.0",
@@ -46,8 +45,11 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^0.5.4",
+    "@aws-amplify/backend-cli": "^0.9.0",
     "@types/jsdom": "^21.1.1",
     "@types/react-transition-group": "^4.4.6",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.3.2"
   }
 }
